--- a/UserServiceAPI.API/appsettings.json
+++ b/UserServiceAPI.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=UserServiceAPI;User=${DB_USER};Password=${DB_PASSWORD};"
+  },
+  "Jwt": {
+    "Key": "${JWT_KEY}",
+    "Issuer": "https://localhost:44383/",
+    "Audience": "https://localhost:44383/"
   }
 }
