--- a/UserServiceAPI.API/appsettings.json
+++ b/UserServiceAPI.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=UserServiceAPI;User=${DB_USER};Password=${DB_PASSWORD};"
+    "DefaultConnection": "Server=localhost;Database=${DB_SCHEMA};User=${DB_USER};Password=${DB_PASSWORD};"
   },
   "Jwt": {
     "Key": "${JWT_KEY}",
